package proto;

// enmu
enum GameRole {
    Attendee = 0;
    PresenterA = 1;
    PresenterB = 2;
}

enum Result {
    OK = 0;
    FL = 1;
    WAIT_OTHER = 101;
}

enum GameStatus {
    Ready = 0;
    Round = 1;
    Poll = 2;
    Punish = 3;
}

// em
message UserData {
    optional uint32 uid = 1;    
    optional string name = 2;  
    optional uint32 imid = 3; 
    optional int32 sex = 4;  
    optional int32 privilege = 5;   // 马甲
    optional GameRole role = 6;
    optional uint32 power = 7; //礼物加权值
}

message Punishment {
   required uint32 id = 1;
   required string desc = 2;
}

message Motion {
    required uint32 id = 1;
    required string desc = 2;
}

message GameGift {
    required uint32 id = 1;
    required uint32 count = 2;
}

message Ranker {
    required UserData user = 1;
    required uint32 s = 2;
}

// 0
message C2SLogout {
}

// 1
message C2SLogin {
    required uint32 uid = 1;
    required string token = 2;
    required uint32 channel = 3;
    required UserData user = 4;
}

// 1001
message S2CLoginRep {
    required Result ret = 1;
    required GameStatus status = 2;
    required UserData user = 3;
}


// 2 其中1位主播点击准备就绪 
message C2SStartGame {
    required UserData presenter = 1;
}

// 1002  
message S2CStartGameRep {
     required Result ret = 1;
}

// 2006 广播其中1位主持人点击了开始
message S2CNotifyReady {
    required UserData presenter = 1;
}

// 2001  游戏状态变更通知
message S2CNotifyStatus {
    required GameStatus status = 1;
}

// 3  
message C2SChat {
    required string msg = 1;
}

// 2012 
message S2CNotifyChat {
    required string msg = 1;
    optional UserData user = 2; 
    optional bool correct = 3; // 猜对
    optional uint32 type = 4; // 空值表示用户聊天 其他为系统广播
}

// 2002 表演开始
message S2CNotifyRoundStart {
    required UserData presenter = 1;    
    required uint32 round = 2;
    required Motion mot = 3;
}

// 2003 展示惩罚选项  
message S2CNotfiyPunishOptions {
    required UserData loser = 1;
    repeated Punishment options = 2;
}

// 4 用户挑选惩罚项
message C2SPoll {
    required uint32 punish_id = 1;
}

// 1004
message S2CPollRep {
    required Result ret = 1;
}

// 2008
message S2CNotifyPolls {
    repeated uint32 polls = 1;
}

// 2004 惩罚开始
message S2CNotifyPunish {
    required Punishment punish = 1;
}

// 2005 积分信息
message S2CNotifyScores {
    repeated uint32 scores = 1;
}

// 5 其中一位主播点击惩罚结束
message C2SPunishOver {
    required UserData presenter = 1;
}

// 1005
message S2CPunishOverRep {
    required Result ret = 1;
}

// 2009 广播其中1位主持人点击了结束
message S2CNotifyPunishOver {
    required UserData presenter = 1;
}

// 6 客户端各种异常引发的游戏终止
message C2SStopGame {
    required uint32 reason = 1;
}

// 7 获取送礼token
message C2SRegGift {
    required uint32 to_uid = 1;
    required GameGift gift = 2; 
}

// 1007
message S2CRegGiftRep {
    required string token = 1; // 空则失败
    required int64 sn = 2;   
    required string orderid = 3;
}

// 1003 客户端SDK发送赠送信息到礼物系统后的通知
message S2CGiftRep {
    required int32 op = 1;
    required string orderid = 2;
}

// 2007
message S2CNotifyGift {
    required UserData giver = 1;
    required UserData receiver = 2;
    required GameGift gift = 3;
}

// 2010
message S2CNotifyTop3Giver {
    repeated Ranker top3 = 1; 
}

// 2011
message S2CNotifyVips {
    repeated Ranker a_vip = 1;
    repeated Ranker b_vip = 2;
}
    

